# touch-gamepad

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  boards.h  sdkconfig.defaults  sdkconfig.defaults.guition  sdkconfig.defaults.waveshare
main/: CMakeLists.txt  Kconfig.projbuild  ble_gamepad.c  ble_gamepad.h  boards.h  display.c  display.h  gamepad_backend.c  gamepad_backend.h  gamepad_hid.h  idf_component.yml  main.c  touch_gamepad.c  touch_gamepad.h  touchpad.c  touchpad.h  ui.c  ui.h  usb_gamepad.c  usb_gamepad.h  waveshare_board.c  waveshare_board.h
