set(srcs
    "main.c"
    "touch_gamepad.c"
    "display.c"
    "touchpad.c"
    "ui.c"
    "gamepad_backend.c"
    "ble_gamepad.c"
    "usb_gamepad.c"
)

idf_component_register(
    SRCS
        ${srcs}
    INCLUDE_DIRS
        "."
    REQUIRES
        nvs_flash
        driver
        esp_timer
        esp_lcd
        esp_hid
        bt
)
